--- a/index.html
+++ b/index.html
@@ -120,18 +120,9 @@
         <div class="container">
             <h2 class="section-title">صور الأعمال</h2>
             <div class="gallery-grid">
-                <div class="gallery-item"><img src="https://placehold.co/600x400/2c2c2c/d4af37?text=Work+Sample+1"
-                        alt="عمل 1"></div>
-                <div class="gallery-item"><img src="https://placehold.co/600x400/2c2c2c/d4af37?text=Work+Sample+2"
-                        alt="عمل 2"></div>
-                <div class="gallery-item"><img src="https://placehold.co/600x400/2c2c2c/d4af37?text=Work+Sample+3"
-                        alt="عمل 3"></div>
-                <div class="gallery-item"><img src="https://placehold.co/600x400/2c2c2c/d4af37?text=Work+Sample+4"
-                        alt="عمل 4"></div>
-                <div class="gallery-item"><img src="https://placehold.co/600x400/2c2c2c/d4af37?text=Work+Sample+5"
-                        alt="عمل 5"></div>
-                <div class="gallery-item"><img src="https://placehold.co/600x400/2c2c2c/d4af37?text=Work+Sample+6"
-                        alt="عمل 6"></div>
+                <div class="gallery-item"><img src="assets/images/work1.jpg" alt="عمل 1"></div>
+                <div class="gallery-item"><img src="assets/images/work2.jpg" alt="عمل 2"></div>
+                <div class="gallery-item"><img src="assets/images/work3.jpg" alt="عمل 3"></div>
             </div>
         </div>
     </section>
@@ -143,7 +134,8 @@
                 <h3>جودة للقرميد والحديد</h3>
                 <p>اتصل بنا لجميع خدمات التركيب والصيانة.</p>
                 <div class="social-icons">
-                    <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/share/17q7vrhnau/" target="_blank" class="social-link"><i
+                            class="fab fa-facebook-f"></i></a>
                     <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
                     <a href="#" class="social-link"><i class="fab fa-tiktok"></i></a>
                 </div>
