--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
                 </div>
             </div>
             <div class="contact-details">
-                <p><i class="fas fa-phone"></i> +966 50 000 0000</p>
-                <a href="https://wa.me/966500000000" class="btn btn-whatsapp"><i class="fab fa-whatsapp"></i> تواصل عبر
+                <p><i class="fas fa-phone"></i> 00962790729925</p>
+                <a href="https://wa.me/962790729925" class="btn btn-whatsapp"><i class="fab fa-whatsapp"></i> تواصل عبر
                     واتساب</a>
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; 2024 جودة للقرميد والحديد. جميع الحقوق محفوظة.</p>
+            <p>&copy; جودة للقرميد.جميع الحقوق محفوظة.حيـــــدر .</p>
         </div>
     </footer>
 
