--- a/index.html
+++ b/index.html
@@ -120,9 +120,10 @@
         <div class="container">
             <h2 class="section-title">صور الأعمال</h2>
             <div class="gallery-grid">
-                <div class="gallery-item"><img src="assets/images/work1.jpg" alt="عمل 1"></div>
-                <div class="gallery-item"><img src="assets/images/work2.jpg" alt="عمل 2"></div>
-                <div class="gallery-item"><img src="assets/images/work3.jpg" alt="عمل 3"></div>
+                <div class="gallery-item"><img src="assets/images/gallery_1.jpg" alt="عمل 1"></div>
+                <div class="gallery-item"><img src="assets/images/gallery_2.jpg" alt="عمل 2"></div>
+                <div class="gallery-item"><img src="assets/images/gallery_3.jpg" alt="عمل 3"></div>
+                <div class="gallery-item"><img src="assets/images/gallery_4.jpg" alt="عمل 4"></div>
             </div>
         </div>
     </section>
@@ -141,7 +142,7 @@
                 </div>
             </div>
             <div class="contact-details">
-                <p><i class="fas fa-phone"></i> 00962790729925</p>
+                <p><a href="tel:00962790729925" class="phone-link"><i class="fas fa-phone"></i> 00962790729925</a></p>
                 <a href="https://wa.me/962790729925" class="btn btn-whatsapp"><i class="fab fa-whatsapp"></i> تواصل عبر
                     واتساب</a>
             </div>
